@@ -39,6 +39,8 @@ Revision history for SPVM
         * Add SPVM_CC_FORCE enviroment variables.
         * Rename force_compile field of SPVM::Builder::Config to force.
         * Add ld_optimize field of SPVM::Builder::Config.
+        * Add static_libs and dynamic_libs fields to SPVM::Builder::Config
+        * Add add_static_libs and add_dynamic_libs methods to SPVM::Builder::Config
 
         [BUG FIX]
         * add push_lib_dirs of SPVM::Builder::Config. This is documented but doesn't exist.
